--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "web-scraper",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node . echo puppeteer session created "
+    "start": "tsx . echo puppeteer session created "
   },
   "keywords": [],
   "author": "",
@@ -13,5 +13,8 @@
   "type": "module",
   "dependencies": {
     "puppeteer": "^23.8.0"
+  },
+  "devDependencies": {
+    "tsx": "^4.19.2"
   }
 }
